<resources>
    <string name="app_name">D20 Simulator</string>
    <string name="dice_value" translatable="false">\ ??</string>
    <string name="dice_type_label">Dice type:</string>
    <string name="dice_roll_label">Roll Dice</string>
    <string name="instructions">Touch the dice to roll. Use the range below to change dice type.</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">User (e-mail)</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="login_message" translatable="false"></string>
    <string name="auth_null">All fields must be filled in for login/sign up.</string>
    <string name="auth_signup_fail">Failed to sign up, check the credentials and try again.</string>
    <string name="auth_password_fail">Password must be at least 6 characters.</string>
    <string name="auth_email_fail">E-mail address must be a valid one.</string>
    <string name="auth_no_connection">You have no internet connection at this moment.</string>
    <string name="logout_message">Do you want do sign out?</string>
    <string name="confirm">Yes</string>
    <string name="cancel">No</string>
    <string name="logout_title">Sign out</string>
    <string name="rolls_action">My rolls</string>
    <string name="logout">Sign out</string>
    <string name="roll_val_title">Roll</string>
    <string name="roll_dice_title">Dice type</string>
    <string name="roll_date_title">Date</string>
    <string name="show_map_message">Touch to view location</string>
</resources>
