<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context="com.androidapps.italo.d20simulator.MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <TextView
        android:id="@+id/diceVal"
        android:layout_width="200dp"
        android:layout_height="228dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/d20_icon_blank"
        android:gravity="center"
        android:soundEffectsEnabled="true"
        android:text="@string/dice_value"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="36sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <SeekBar
        android:id="@+id/diceTypeScroll"
        android:layout_width="292dp"
        android:layout_height="27dp"
        android:layout_marginTop="20dp"
        android:max="100"
        android:progress="0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/diceTypeLabel" />

    <TextView
        android:id="@+id/diceTypeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dice_type_label"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/diceVal" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="292dp"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="8dp"
        android:text="@string/instructions"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

</android.support.constraint.ConstraintLayout>
